# RustForum

./: .env  Cargo.toml
migrations/20160815133237_rustforum/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: base.html  index.html  login.html  post.html  profile.html  register.html  signup.html  submission.html
