[package]
name = "RustForum"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "3"
tera = "1.5.0"
 llvm-config = "0.1.0"
serde = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
actix-identity = "0.3.1"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4"
r2d2 = "0.8"
argonautica = "0.2"
